--- a/mainStyle.css
+++ b/mainStyle.css
@@ -7,12 +7,19 @@ body {
     background-color: crimson;
 }
 div.background {
-    background: url(JOHNNY\ AIRLINES.png) no-repeat;
-    border: 4px solid black;
-    width: fit-content;
+    border: 4px solid rgb(251, 8, 8);
+    object-fit: contain;
 }
   
 div.transbox {
-    border: 1px solid black;
+    border: 1px solid rgb(2, 255, 94);
     opacity: 0.75;
+}
+a {
+    width: fit-content;
+    float: left;
+}
+img {
+    width:100%;
+    height: 100%;
 }
